# rust-ci

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/actions/_lib/: changelog-version.sh  crate-version.sh  out-dir.sh  rust-version.sh  seal.sh  semver.sh
.github/actions/build-image/: README.md  action.yml  build-image.sh
.github/actions/cargo-docker/: action.yml  cargo-docker-out-dir.sh  cargo-docker.sh
.github/actions/cargo-fetch/: action.yml
.github/actions/cargo-install/: README.md  action.yml  cargo-install.sh
.github/actions/cargo-out-dir/: action.yml  cargo-out-dir.sh
.github/actions/cargo-use/: README.md  action.yml  cargo-use.sh
.github/actions/changelog/: action.yml  changelog.sh
.github/actions/check-release-readiness/: action.yml  check-release-readiness.sh
.github/actions/check-release-readiness-docker/: action.yml  check-release-readiness.sh
.github/actions/cut-release/: action.yml  cut-release.sh
.github/actions/install-toolchain/: action.yml  install-toolchain.sh
.github/actions/lint-and-test/: action.yml  lint-and-test.sh
.github/actions/lint-and-test-docker/: action.yml  lint-and-test.sh
.github/actions/msrv/: README.md  action.yml  msrv.sh
.github/actions/publish-dry-run/: action.yml  prep.sh  verify.sh
.github/workflows/: ci.yml  cut.yml  publish-image.yml  release.yml  selftest.yml
docs/: private-git-dependencies.md  release-flow.md
fixtures/sample-crate/: CHANGELOG.md  Cargo.toml  build.rs
fixtures/sample-crate/src/: lib.rs
fixtures/sample-crate/tests/: env_passthrough.rs
image/: Dockerfile
(+7 files in other folders)
